# meteofrance-rs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  constants.rs  lib.rs  model.rs  url.rs
src/model/: forecast.rs  forecast_v2.rs  place.rs  rain.rs
