[package]
name = "meteofrance-rs"
version = "0.2.0"
authors = ["Aimery Tauveron <atauveron@via.ecp.fr>"]
edition = "2021"

[dependencies]
chrono = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.0", features = ["tls", "json"], optional = true }

[features]
ureq = ["dep:ureq"]
